Update Classes for Choice section, Fixed UI z-index

--- a/styles.css
+++ b/styles.css
@@ -83,15 +83,30 @@ body{
     color:#656256;
 }
 
-.playerChose,.computerChose{
-    width:100px;
-    height:100px;
+
+.playerChoseBg, .computerChoseBg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:150px;
+    height:150px;
     padding:10px;
     border-color:#9EBC9F;
     border-radius: 20px;
     border-style: solid;
     border-width: 1px;
     background: #9ebc9f;
+
+}
+
+.playerChoseBg .playerChose,
+.computerChoseBg .computerChose{
+    width:100px;
+    height:100px;
+    background-image: url("imgs/rock.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 
@@ -126,3 +141,6 @@ button:hover{
     background: #D6F599;
     color:#656256; 
 }
+
+
+/*CSS IMAGE CHANGEE*/
